// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGalleryHeadingMarkup if \`propertyName\` is defined if \`ratingNumber\` is greater than 0 should return the right structure 1`] = `
<div>
  <div
    className="heading-with-rating"
  >
    <Heading
      className={null}
      hasMargin={true}
      isColorInverted={false}
      size="medium"
      textAlign={null}
    >
      <Header
        as="h3"
        className=""
        inverted={false}
        textAlign={null}
      >
        <h3
          className="ui header"
        >
          Wurp
        </h3>
      </Header>
    </Heading>
    <Rating
      iconSize="small"
      isShowingNumeral={true}
      ratingNumber={1}
    >
      1
      <Rating
        clearable="auto"
        disabled={true}
        maxRating={5}
        rating={1}
        size="small"
      >
        <div
          className="ui small disabled rating"
          onMouseLeave={[Function]}
          role="radiogroup"
        >
          <RatingIcon
            active={true}
            aria-checked={true}
            aria-posinset={1}
            aria-setsize={5}
            as="i"
            index={0}
            key="0"
            onClick={[Function]}
            onMouseEnter={[Function]}
            selected={false}
          >
            <i
              aria-checked={true}
              aria-posinset={1}
              aria-setsize={5}
              className="active icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              role="radio"
              tabIndex={0}
            />
          </RatingIcon>
          <RatingIcon
            active={false}
            aria-checked={false}
            aria-posinset={2}
            aria-setsize={5}
            as="i"
            index={1}
            key="1"
            onClick={[Function]}
            onMouseEnter={[Function]}
            selected={false}
          >
            <i
              aria-checked={false}
              aria-posinset={2}
              aria-setsize={5}
              className="icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              role="radio"
              tabIndex={0}
            />
          </RatingIcon>
          <RatingIcon
            active={false}
            aria-checked={false}
            aria-posinset={3}
            aria-setsize={5}
            as="i"
            index={2}
            key="2"
            onClick={[Function]}
            onMouseEnter={[Function]}
            selected={false}
          >
            <i
              aria-checked={false}
              aria-posinset={3}
              aria-setsize={5}
              className="icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              role="radio"
              tabIndex={0}
            />
          </RatingIcon>
          <RatingIcon
            active={false}
            aria-checked={false}
            aria-posinset={4}
            aria-setsize={5}
            as="i"
            index={3}
            key="3"
            onClick={[Function]}
            onMouseEnter={[Function]}
            selected={false}
          >
            <i
              aria-checked={false}
              aria-posinset={4}
              aria-setsize={5}
              className="icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              role="radio"
              tabIndex={0}
            />
          </RatingIcon>
          <RatingIcon
            active={false}
            aria-checked={false}
            aria-posinset={5}
            aria-setsize={5}
            as="i"
            index={4}
            key="4"
            onClick={[Function]}
            onMouseEnter={[Function]}
            selected={false}
          >
            <i
              aria-checked={false}
              aria-posinset={5}
              aria-setsize={5}
              className="icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              role="radio"
              tabIndex={0}
            />
          </RatingIcon>
        </div>
      </Rating>
    </Rating>
  </div>
</div>
`;

exports[`getGalleryHeadingMarkup if \`propertyName\` is defined should return the right structure 1`] = `
<div>
  <div
    className="heading-with-rating"
  >
    <Heading
      className={null}
      hasMargin={true}
      isColorInverted={false}
      size="medium"
      textAlign={null}
    >
      <Header
        as="h3"
        className=""
        inverted={false}
        textAlign={null}
      >
        <h3
          className="ui header"
        >
          Wurp
        </h3>
      </Header>
    </Heading>
  </div>
</div>
`;
